--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "## Description",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -19,8 +19,11 @@
   "homepage": "https://github.com/Kemberly-Eliscar/node-db-challenge#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "helmet": "^3.21.3",
     "knex": "^0.20.11",
     "sqlite3": "^4.1.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "nodemon": "^2.0.2"
+  }
 }
